--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-alice-carousel": "^2.5.1",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.24.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
@@ -35,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
